# argo-lang

./: .clang-format  .gitignore  README.md
doc/: infinite_sum.arg  infinite_sum.argo  iterate.argo  routines.arg  routines.argo  routines_unsorted.argo  stack.argo  sum.arg  sum.argo  sum_to_condition.arg  sum_to_condition.argo
ext/code/argo/: CHANGELOG.md  README.md  package.json
ext/code/argo/syntaxes/: argo.tmLanguage.json
ext/vs-code/argo/: vsc-extension-quickstart.md
src/assembler/: argo.g4  example.argoc  pom.xml
src/assembler/src/main/java/: ArgoC.java  Main.java
src/assembler/src/main/java/antlr4/: ArgoBaseListener.java  ArgoBaseVisitor.java  ArgoLexer.java  ArgoListener.java  ArgoParser.java  ArgoVisitor.java
src/assembler/src/main/java/bytecode/: ClassFile.java  Generator.java  Opcode.java  Routine.java
src/assembler/src/main/java/cli/: Args.java
src/assembler/src/main/resources/: Argo.g4  argo.g4  sum.argo
src/vm/: CMakeLists.txt
src/vm/src/: main.c
src/vm/src/core/: bytecode.h  cli.h  decoder.h  eflags.h  engine.h  instructions.h  options.h  runtime.h  stack.h
src/vm/src/diagnostic/: snapshots.c  snapshots.h
src/vm/src/internal/: bytecode.c  cli.c  eflags.c  loop.c  operations.c  options.c  parser.c  stack.c  vm.c
src/vm/src/types/: bytecode.h  cli.h  eflags.h  options.h  stack.h  vm.h
src/vm/src/types/isa/: opcode.h  operation.h
src/vm/test/: main.c
src/vm/test/core/: test-decoder.c  test-decoder.h  test-engine.c  test-engine.h
tools/: code-minifier__vm.sh  deps-mapper.sh  run-formatting.sh
(+7 files in other folders)
